--- a/src/components/pages/LoginPage/LoginPage.module.scss
+++ b/src/components/pages/LoginPage/LoginPage.module.scss
@@ -5,28 +5,44 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 20px;
     padding: 15px;
     border-radius: 15px;
-    background: #646cffaa;
+    background: transparent;
+    border: 3px solid #646cffaa;
+    backdrop-filter: blur(15px);
     h2 {
         color: white;
     }
     input {
+        color: white;
         margin: 10px;
+        outline: none;
     }
     button {
         margin: 10px;
-        color: #717171;
+        color: #333;
+        background: linear-gradient(to right top, #646cffaa, #646cffff);
+        transition: 0.2s;
+        border: none;
+        outline: none;
     }
-
     button:hover {
-        color: #646cffaa;
+        color: white;
+        transition: 0.2s;
     }
     input {
         height: 30px;
         border-radius: 5px;
         box-shadow: none;
         border: none;
+        background: transparent;
+        border-bottom: 3px solid #646cffaa;
+        border-radius: 0px;
+    }
+    input:hover {
+        border-color: #646cffff;
+    }
+    input:focus {
+        border-color: white;
     }
 }
