--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #213547;
-   background-image: url('/public/1.jpg');
+   background-image: url('/1.jpg');
    background-size: cover;
    background-position: center;
 }
