--- a/src/components/pages/Navbar/Navbar.module.scss
+++ b/src/components/pages/Navbar/Navbar.module.scss
@@ -16,4 +16,8 @@
         color: white;
         text-decoration: underline;
     }
+    h2 {
+        color: white;
+        padding: 11px;
+    }
 }
