--- a/src/components/pages/LoginPage/LoginPage.module.scss
+++ b/src/components/pages/LoginPage/LoginPage.module.scss
@@ -10,7 +10,8 @@
     background: transparent;
     border: 3px solid #646cffaa;
     backdrop-filter: blur(15px);
-    h2 {
+    h2,
+    .error {
         color: white;
     }
     input {
