--- a/src/components/pages/MainPage/MainPage.module.scss
+++ b/src/components/pages/MainPage/MainPage.module.scss
@@ -73,6 +73,7 @@ input {
     color: white;
     margin: 10px;
     outline: none;
+
 }
 button {
     margin: 10px;
@@ -85,6 +86,7 @@ button {
 button:hover {
     background: #646cffff;
     transition: 0.2s;
+    transform: scale(1.1);
 }
 input {
     height: 30px;
